manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  labels:
    app: playground
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: playground-web
